Add exports to Surefire options